--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-content: center;
   width: 100%;
-  margin: 25px auto;
+  margin: 0 auto;
   max-width: 1000px;
   h2 {
     @extend %heading;
@@ -21,7 +21,7 @@
     display: flex;
     flex-flow: row nowrap;
     max-width: 1000px;
-    margin: 20px auto;
+    margin: 0 auto;
   }
 }
 .work-content {
