--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -22,6 +22,8 @@ $shadow-color: #DC00A0;
 
 $light-grey: #e9e9e9;
 
+$about-background: #ebeffb;
+
 %text {
   font-family: $text-font;
   font-weight: 200;
@@ -43,9 +45,8 @@ $light-grey: #e9e9e9;
    padding-left: 15px;
    font-size: 5rem;
    color: darken($shadow-color, 10%);
-   opacity: 0.7;
-   -webkit-text-stroke-width: 2px;
-   -webkit-text-stroke-color:lighten($shadow-color, 25%) ;
+   -webkit-text-stroke-width: 3px;
+   -webkit-text-stroke-color:lighten($shadow-color, 30%);
    font-family: $hello-font;
-   text-shadow: 0px 0px 35px $shadow-color, 10px 0 20px $shadow-color, 0px -8px 20px $shadow-color, 0px -8px 20px $shadow-color;
+   text-shadow: 0px 0px 25px $shadow-color, 20px 0 50px $shadow-color, -20px 0 50px $shadow-color, 0px -18px 30px $shadow-color, 0px 18px 30px $shadow-color;
  }
