--- a/css/main.css
+++ b/css/main.css
@@ -290,7 +290,9 @@ header {
 
 #about {
   background-color: #ebeffb;
-  padding: 150px 0; }
+  padding: 150px 0;
+  max-width: 1000px;
+  margin: 0 auto; }
 
 .top {
   display: flex;
