--- a/css/main.css
+++ b/css/main.css
@@ -63,11 +63,11 @@ table {
 header .neonSign #hello, header .neonSign #h {
   padding-left: 15px;
   font-size: 5rem;
-  color: #a9007b;
-  -webkit-text-stroke-width: 3px;
+  color: #F3AAC3;
+  -webkit-text-stroke-width: 4px;
   -webkit-text-stroke-color: #ff76da;
   font-family: "Neon Lights", sans-serif;
-  text-shadow: 0px 0px 25px #DC00A0, 20px 0 50px #DC00A0, -20px 0 50px #DC00A0, 0px -18px 30px #DC00A0, 0px 18px 30px #DC00A0; }
+  text-shadow: 0px 0px 25px #DC00A0, 20px 0 50px #DC00A0, -20px 0 50px #DC00A0, 0px -18px 70px #DC00A0, 0px 18px 70px #DC00A0; }
 
 @keyframes blink {
   0% {
@@ -119,7 +119,7 @@ header .neonSign #hello, header .neonSign #h {
   src: local("DIN Pro Condensed Regular"), url("../fonts/DINPro-Cond.woff") format("woff"); }
 @font-face {
   font-family: 'Neon Lights';
-  src: url("../fonts/neon-lights.regular.tff") format("tff"); }
+  src: url("../fonts/neon-lights-regular.tff") format("tff"); }
 @font-face {
   font-family: 'Colab Light';
   src: url("../fonts/Colablig.off") format("off"); }
