--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -25,6 +25,7 @@
     font-weight: bold;
   }
   #email {
+    @extend %button;
     font-size: 1.5em;
     margin: 20px 0;
     transition: all 0.5s ease-in-out;
