--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,7 +1,7 @@
 ////fonts
 $font-stack: 'DIN Pro Condensed Regular', monospace;
 $text-font: 'Colab Light', sans-serif;
-$hello-font: 'Neon Lights', sans-serif;;
+$hello-font: 'Neon Lights', sans-serif;
 //////colors
 
 $mid-blue: #6683E1;
