--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,13 +2,12 @@
 @font-face {
   font-family: 'DIN Pro Condensed Regular';
   font-style: normal;
-  font-weight: normal;
   src: local('DIN Pro Condensed Regular'), url('../fonts/DINPro-Cond.woff') format('woff');
 }
 
  @font-face {
    font-family: 'Neon Lights';
-   src: url('../fonts/neon-lights-regular.tff') format('tff');
+   src: url("../fonts/neonlights-webfont.woff") format("woff");
  }
 
 
