--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -44,7 +44,7 @@
   width: 30%;
   height: 500px;
   padding: 150px;
-  background: $dark-grey;
+  background: $dark-blue;
   display: none;
   z-index: -1;
   @media  screen and (min-width: 759px) {
