--- a/css/main.css
+++ b/css/main.css
@@ -192,16 +192,19 @@ nav {
 header {
   width: 100%;
   height: 100vh;
-  margin: 0 auto;
+  margin: 0;
   display: flex;
   flex-flow: column;
-  justify-content: center; }
-  @media screen and (min-width: 500px) {
-    header {
-      width: 500px; } }
+  justify-content: center;
+  align-content: center;
+  background-color: #232C33; }
   header .neonSign {
     position: relative;
-    display: flex; }
+    display: flex;
+    margin: 0 auto; }
+    @media screen and (min-width: 500px) {
+      header .neonSign {
+        width: 500px; } }
     header .neonSign audio {
       display: none; }
     header .neonSign #hello {
@@ -231,13 +234,17 @@ header {
     text-align: right;
     padding-right: 0.5em;
     font-size: 1.8em;
+    margin: 0 auto;
     min-width: 300px; }
+    @media screen and (min-width: 500px) {
+      header .intro {
+        width: 500px; } }
     @media screen and (min-width: 414px) {
       header .intro {
         font-size: 2em; } }
   header a {
-    align-self: center;
-    margin-top: 40%; }
+    margin: 0 auto;
+    margin-top: 20px; }
 
 .heading {
   display: flex;
@@ -277,7 +284,7 @@ header {
   width: 30%;
   height: 500px;
   padding: 150px;
-  background: #232C33;
+  background: #112739;
   display: none;
   z-index: -1; }
   @media screen and (min-width: 759px) {
