--- a/css/main.css
+++ b/css/main.css
@@ -188,16 +188,19 @@ nav {
     @media screen and (min-width: 800px) {
       nav a, nav span {
         font-size: 2em; } }
+    nav a:hover, nav span:hover {
+      color: #DC00A0; }
 
 header {
   width: 100%;
   height: 100vh;
-  margin: 0;
+  margin: 0 auto;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-content: center;
-  background-color: #232C33; }
+  background-color: #232C33;
+  max-width: 1000px; }
   header .neonSign {
     position: relative;
     display: flex;
@@ -233,8 +236,9 @@ header {
   header .intro {
     text-align: right;
     padding-right: 0.5em;
-    font-size: 1.8em;
+    font-size: 1.5em;
     margin: 0 auto;
+    color: #e9e9e9;
     min-width: 300px; }
     @media screen and (min-width: 500px) {
       header .intro {
