--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,13 +2,13 @@
 header {
   width: 100%;
   height: 100vh;
-  margin: 0;
+  margin: 0 auto;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-content: center;
   background-color: $dark-grey;
-
+  max-width: 1000px;
   .neonSign {
     position: relative;
     display: flex;
@@ -51,8 +51,9 @@ header {
   .intro {
     text-align: right;
     padding-right: 0.5em;
-    font-size: 1.8em;
+    font-size: 1.5em;
     margin: 0 auto;
+    color: $light-grey;
     @extend %text;
     min-width: 300px;
     @media  screen and (min-width: 500px) {
