--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -24,5 +24,8 @@ nav {
     @media screen and (min-width: 800px) {
       font-size: 2em;
     }
+    &:hover {
+      color: $shadow-color;
+    }
   }
 }
