add JS/Jquery and full page scroll

--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -16,7 +16,7 @@
 }
 
 //start of work area///
-#work, #contact {
+#section1, #section3 {
   @media  screen and (min-width: 760px) {
     display: flex;
     flex-flow: row nowrap;
