--- a/css/main.css
+++ b/css/main.css
@@ -166,7 +166,7 @@ header .neonSign #hello, header .neonSign #h {
   -webkit-animation: bounce 2.5s;
   animation: bounce 2.5s ease-in-out; }
 
-nav {
+#menu {
   background: white;
   display: flex;
   justify-content: space-around;
@@ -175,20 +175,20 @@ nav {
   margin: 0 auto;
   width: 100%;
   height: 100px;
-  max-width: 800px; }
-  nav img {
+  z-index: 9999; }
+  #menu img {
     display: none;
     width: 100px; }
     @media screen and (min-width: 414px) {
-      nav img {
+      #menu img {
         display: block; } }
-  nav a, nav span {
+  #menu a, #menu span {
     font-family: "DIN Pro Condensed Regular", monospace;
     font-size: 1.5em; }
     @media screen and (min-width: 800px) {
-      nav a, nav span {
+      #menu a, #menu span {
         font-size: 2em; } }
-    nav a:hover, nav span:hover {
+    #menu a:hover, #menu span:hover {
       color: #DC00A0; }
 
 header {
@@ -304,7 +304,7 @@ header {
     height: 100px;
     z-index: 999; } }
 
-#about {
+#section2 {
   background-color: #ebeffb;
   padding: 150px 0;
   max-width: 1000px;
