--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -9,7 +9,7 @@ header {
   align-content: center;
 
   background-color: $dark-grey;
-  max-width: 1000px;
+  // max-width: 1000px;
   .neonSign {
     position: relative;
     display: flex;
