--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -1,7 +1,11 @@
 #section2 {
-background-color: $about-background;
+background: url("../img/pattern.png");
+background-size: cover;
 max-width: 1000px;
 margin: 0 auto;
+.fp-tableCell {
+  vertical-align: top;
+}
 }
 .top {
   display: flex;
@@ -36,7 +40,9 @@ margin: 0 auto;
   }
   ul {
     line-height: 1.2;
-    font-size: 1.2em;
+    @media screen and (min-width: 414px){
+      font-size: 1.2em;
+    }
   }
 }
 #mao {
@@ -48,8 +54,12 @@ margin: 0 auto;
   border: 1px solid $dark-grey;
 }
 .aboutImages {
-  display: flex;
-  justify-content: center;
+  display: none;
+  @media screen and (min-height: 900px) {
+    display: flex;
+    justify-content: center;
+
+  }
   img {
     width: 30%;
     height: 30%;
@@ -58,15 +68,19 @@ margin: 0 auto;
 }
 .about-resume {
   text-align: center;
-  margin-top: 25px;
-  padding: 20px 0;
+  // margin-top: 25px;
+  // padding: 20px 0;
   #resume {
     @extend %button;
-
     align-self: center;
-    font-size: 2em;
+    font-size: 1.2em;
     font-family: $font-stack;
     transition: all 0.5s ease-in-out;
+    letter-spacing: 2px;
+    @media screen and (min-width: 414px) {
+      font-size: 2em;
+      padding-top: 25px;
+    }
   }
   #resume:hover {
     color: $bright-blue;
