--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -1,6 +1,11 @@
-
+.fp-viewing-firstPage .container #menu {
+  background-color: $dark-grey;
+  color: white;
+  a {
+    color: white;
+  }
+}
 #menu {
-    // position: fixed;
   background: white;
   display: flex;
   justify-content: space-around;
@@ -8,9 +13,11 @@
   align-content: center;
   margin: 0 auto;
   width: 100%;
-  height: 100px;
-  // max-width: 800px;
+  height: 60px;
   z-index: 9999;
+  @media screen and (min-width: 414px) {
+    height: 100px;
+  }
   img {
     display: none;
     width: 100px;
@@ -20,7 +27,6 @@
   }
   a, span {
     font-family: $font-stack;
-    // margin-left: 20px;
     font-size: 1.5em;
     @media screen and (min-width: 800px) {
       font-size: 2em;
