--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -14,6 +14,15 @@
   }
 }
 
+.work-heading {
+  background-color: $dark-blue;
+  display: flex;
+  justify-content: flex-end;
+  .fp-tableCell {
+    text-align: center;
+  }
+}
+
 //start of work area///
 #section1, #section3 {
   @media  screen and (min-width: 760px) {
@@ -43,7 +52,7 @@
   width: 30%;
   height: 500px;
   padding: 150px;
-  background: $dark-blue;
+  // background: $dark-blue;
   display: none;
   z-index: -1;
   @media  screen and (min-width: 759px) {
