--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -1,6 +1,7 @@
 #section3 {
-  background: url("../img/pattern.png") bottom;
+  background: url("../img/fish.png") bottom;
   background-size: cover;
+
 }
 .contact-content {
   width: 100%;
@@ -31,7 +32,6 @@
   #email {
     @extend %button;
     font-size: 1.5em;
-    margin: 20px 0;
     transition: all 0.5s ease-in-out;
   }
   #email:hover {
@@ -39,11 +39,43 @@
   }
 }
 
-#contact-image {
+// #contact-image {
+//   @media  screen and (min-width: 759px) {
+//     align-self: center;
+//     width: 200px;
+//     height: auto;
+//     z-index: 999;
+//   }
+// }
+
+//heading for contact///
+.heading {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+  margin: 0 auto;
+  h2 {
+    @extend %heading;
+    @media screen and (min-width: 415px) {
+      font-size: 5em;
+      height: 300px;
+
+    }
+  }
+}
+
+.wide {
+  width: 30%;
+  height: 500px;
+  padding: 150px;
+  background: $dark-blue;
+  display: none;
+  z-index: -1;
   @media  screen and (min-width: 759px) {
-    align-self: center;
-    width: 200px;
-    height: auto;
-    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-content: center;
   }
 }
