--- a/css/main.css
+++ b/css/main.css
@@ -50,10 +50,8 @@ table {
   font-weight: 200; }
 
 .about-resume #resume, .contact-content #email {
-  border: 2px solid #112739;
-  background-color: #ebeffb;
-  padding: 5px;
-  border-radius: 3px; }
+  border-bottom: 2px solid #6683E1;
+  padding: 5px; }
 
 .heading h2 {
   align-self: center;
@@ -189,6 +187,8 @@ nav {
     @media screen and (min-width: 800px) {
       nav a, nav span {
         font-size: 2em; } }
+  nav a:hover {
+    color: #1944D8; }
 
 header {
   width: 100%;
