--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -1,12 +1,56 @@
+.work-content {
+  display: none;
+}
 
+#section1 {
+  background-color: $dark-blue;
+  .fp-tableCell {
+    padding: 25px 0;
+    border-top: 5px solid $shadow-color;
+    vertical-align: top;
+    @media screen and (min-width: 415px) {
+      padding: 0px;
+    }
+  }
+}
 .work-heading {
   background-color: $dark-blue;
   display: flex;
+  flex-flow: column;
   justify-content: center;
-  height: 150px;
-  border-top: 5px solid $shadow-color;
-  .fp-tableCell {
-    text-align: center;
+  height: 100%;
+  @media screen and (min-width: 990px) {
+    flex-flow: row;
+  }
+  #work-image {
+    align-self: center;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 20px;
+    @media screen and (min-width: 990px) {
+      margin: 50px;
+      width: 200px;
+      height: 200px;
+    }
+  }
+  .collage {
+    background-color: $dark-blue;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    @media screen and (min-width: 990px) {
+      align-content: center;
+      max-width: 700px;
+    }
+    img {
+      margin: 15px;
+      border: 2px solid white;
+      width: 300px;
+      height: 300px;
+      @media screen and (min-width: 990px) {
+        border: 4px solid white;
+      }
+    }
   }
 }
 
