add media q for contact and work section

--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -4,12 +4,19 @@
 
 #section1 {
   background-color: $dark-blue;
+  padding-bottom: 100px;
+  @media screen and (min-width: 415px) {
+    padding: 0px;
+  }
   .fp-tableCell {
     padding: 25px 0;
     border-top: 5px solid $shadow-color;
     vertical-align: top;
     @media screen and (min-width: 415px) {
       padding: 0px;
+    }
+    @media screen and (min-width: 990px) {
+      vertical-align: middle;
     }
   }
 }
@@ -18,7 +25,6 @@
   display: flex;
   flex-flow: column;
   justify-content: center;
-  height: 100%;
   @media screen and (min-width: 990px) {
     flex-flow: row;
   }
@@ -26,7 +32,7 @@
     align-self: center;
     width: 150px;
     height: 150px;
-    margin-bottom: 20px;
+    margin: 20px 0;
     @media screen and (min-width: 990px) {
       margin: 50px;
       width: 200px;
@@ -45,8 +51,12 @@
     img {
       margin: 15px;
       border: 2px solid white;
-      width: 300px;
-      height: 300px;
+      width: 150px;
+      height: 150px;
+      @media screen and (min-width: 415px) {
+        width: 300px;
+        height: 300px;
+      }
       @media screen and (min-width: 990px) {
         border: 4px solid white;
       }
