--- a/css/main.css
+++ b/css/main.css
@@ -264,7 +264,11 @@ header {
   display: none; }
 
 #section1 {
-  background-color: #112739; }
+  background-color: #112739;
+  padding-bottom: 100px; }
+  @media screen and (min-width: 415px) {
+    #section1 {
+      padding: 0px; } }
   #section1 .fp-tableCell {
     padding: 25px 0;
     border-top: 5px solid #DC00A0;
@@ -272,13 +276,15 @@ header {
     @media screen and (min-width: 415px) {
       #section1 .fp-tableCell {
         padding: 0px; } }
+    @media screen and (min-width: 990px) {
+      #section1 .fp-tableCell {
+        vertical-align: middle; } }
 
 .work-heading {
   background-color: #112739;
   display: flex;
   flex-flow: column;
-  justify-content: center;
-  height: 100%; }
+  justify-content: center; }
   @media screen and (min-width: 990px) {
     .work-heading {
       flex-flow: row; } }
@@ -286,7 +292,7 @@ header {
     align-self: center;
     width: 150px;
     height: 150px;
-    margin-bottom: 20px; }
+    margin: 20px 0; }
     @media screen and (min-width: 990px) {
       .work-heading #work-image {
         margin: 50px;
@@ -304,8 +310,12 @@ header {
     .work-heading .collage img {
       margin: 15px;
       border: 2px solid white;
-      width: 300px;
-      height: 300px; }
+      width: 150px;
+      height: 150px; }
+      @media screen and (min-width: 415px) {
+        .work-heading .collage img {
+          width: 300px;
+          height: 300px; } }
       @media screen and (min-width: 990px) {
         .work-heading .collage img {
           border: 4px solid white; } }
@@ -407,14 +417,14 @@ header {
 #section3 {
   background: url("../img/fish.png") bottom;
   background-size: cover; }
+  #section3 .fp-tableCell {
+    vertical-align: top; }
 
 .contact-content {
-  width: 100%;
-  height: 90vh;
-  padding-top: 25%;
+  height: 400px;
   display: flex;
   flex-flow: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center; }
   .contact-content .icons {
     display: flex;
@@ -424,13 +434,17 @@ header {
         padding-bottom: 20px; } }
     .contact-content .icons a {
       padding: 10px 10px 0 10px; }
+    .contact-content .icons img {
+      width: 75px; }
   .contact-content p {
     padding: 20px 10px;
     font-size: 1.2em;
     font-weight: bold; }
   .contact-content #email {
-    font-size: 1.5em;
-    transition: all 0.5s ease-in-out; }
+    font-size: 1.5em; }
+    @media screen and (min-width: 414px) {
+      .contact-content #email {
+        font-size: 2em; } }
   .contact-content #email:hover {
     color: #1944D8; }
 
