--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -1,27 +1,27 @@
 #section3 {
   background: url("../img/fish.png") bottom;
   background-size: cover;
-
+  .fp-tableCell {
+    vertical-align: top;
+  }
 }
 .contact-content {
-  width: 100%;
-  height: 90vh;
-  padding-top: 25%;
+  height: 400px;
   display: flex;
   flex-flow: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   .icons {
     display: flex;
     justify-content: center;
-    // border-bottom: 1px solid $dark-grey;
     @media  screen and (min-width: 760px) {
       padding-bottom: 20px;
-      // border-bottom: 1px solid $dark-grey;
     }
     a {
       padding: 10px 10px 0 10px;
-
+    }
+    img {
+      width: 75px;
     }
   }
   p {
@@ -32,7 +32,9 @@
   #email {
     @extend %button;
     font-size: 1.5em;
-    transition: all 0.5s ease-in-out;
+    @media screen and (min-width: 414px) {
+      font-size: 2em;
+    }
   }
   #email:hover {
     color: $bright-blue;
