add slide up/down in work

--- a/css/main.css
+++ b/css/main.css
@@ -260,9 +260,6 @@ header {
     margin: 0 auto;
     margin-top: 20px; }
 
-.work-content {
-  display: none; }
-
 #section1 {
   background-color: #112739;
   padding-bottom: 100px; }
@@ -281,6 +278,7 @@ header {
         vertical-align: middle; } }
 
 .work-heading {
+  max-width: 1200px;
   background-color: #112739;
   display: flex;
   flex-flow: column;
@@ -302,11 +300,12 @@ header {
     background-color: #112739;
     display: flex;
     flex-flow: row wrap;
-    justify-content: center; }
+    justify-content: center;
+    max-height: 700px; }
     @media screen and (min-width: 990px) {
       .work-heading .collage {
         align-content: center;
-        max-width: 700px; } }
+        width: 700px; } }
     .work-heading .collage img {
       margin: 15px;
       border: 2px solid white;
@@ -321,26 +320,35 @@ header {
           border: 4px solid white; } }
 
 .work-content {
-  width: 100%; }
+  color: white;
+  flex-flow: column;
+  display: flex; }
+  .work-content #back {
+    font-size: 2em;
+    font-family: "DIN Pro Condensed Regular", monospace; }
   .work-content a {
-    display: block;
     font-size: 2.1em;
     font-family: "DIN Pro Condensed Regular", monospace;
     text-decoration: underline;
     letter-spacing: 2px;
-    padding: 15px; }
+    padding: 15px;
+    color: white; }
     .work-content a:hover {
       color: #DC00A0; }
   .work-content h2 {
     font-size: 1.2em;
     padding: 15px; }
   .work-content img {
+    align-self: center;
     width: auto;
     height: 200px; }
     @media screen and (min-width: 760px) {
       .work-content img {
         width: 50%;
         height: auto; } }
+  .work-content span {
+    align-self: flex-end;
+    padding: 50px; }
   .work-content p {
     line-height: 1.5;
     margin-left: 15px; }
