--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -1,6 +1,4 @@
-.work-content {
-  display: none;
-}
+
 
 #section1 {
   background-color: $dark-blue;
@@ -21,6 +19,7 @@
   }
 }
 .work-heading {
+  max-width: 1200px;
   background-color: $dark-blue;
   display: flex;
   flex-flow: column;
@@ -44,9 +43,10 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    max-height: 700px;
     @media screen and (min-width: 990px) {
       align-content: center;
-      max-width: 700px;
+      width: 700px;
     }
     img {
       margin: 15px;
@@ -63,37 +63,24 @@
     }
   }
 }
-
-//start of work area///
-// #section1, #section3 {
-//   @media  screen and (min-width: 760px) {
-//     display: flex;
-//     flex-flow: row nowrap;
-//     max-width: 1000px;
-//     margin: 0 auto;
-//   }
+// .work-content{
+//   display: none;
 // }
-
-//centers the work image and makes the other slides have a top align
-// .fp-slidesContainer {
-//     #work-image{
-//       margin-top: 55%;
-//   }
-//   .fp-tableCell {
-//     vertical-align: top;
-//     // text-align: left;
-//   }
-// }
-
 .work-content {
-  width: 100%;
+  color: white;
+  flex-flow: column;
+  display: flex;
+  #back {
+    font-size: 2em;
+    font-family: $font-stack;
+  }
   a{
-    display: block;
     font-size: 2.1em;
     font-family: $font-stack;
     text-decoration: underline;
     letter-spacing: 2px;
     padding: 15px;
+    color: white;
     &:hover {
       color: $shadow-color;
     }
@@ -101,30 +88,23 @@
   h2 {
     font-size: 1.2em;
     padding: 15px;
+
   }
-  img {
+  img{
+    align-self: center;
     width: auto;
     height: 200px;
     @media screen and (min-width: 760px) {
       width: 50%;
       height: auto;
     }
-    // &:hover {
-    //   transition:
-    // }
+  }
+  span {
+    align-self: flex-end;
+    padding: 50px;
   }
   p {
     line-height: 1.5;
     margin-left: 15px;
   }
 }
-
-
-// #work-image {
-//   @media  screen and (min-width: 759px) {
-//     align-self: center;
-//     width: 100px;
-//     height: 100px;
-//     z-index: 999;
-//   }
-// }
