--- a/css/main.css
+++ b/css/main.css
@@ -272,9 +272,7 @@ header {
     vertical-align: top; }
     @media screen and (min-width: 415px) {
       #section1 .fp-tableCell {
-        padding: 0px; } }
-    @media screen and (min-width: 990px) {
-      #section1 .fp-tableCell {
+        padding: 0px;
         vertical-align: middle; } }
 
 .work-heading {
@@ -322,7 +320,8 @@ header {
 .work-content {
   color: white;
   flex-flow: column;
-  display: flex; }
+  display: flex;
+  align-content: center; }
   .work-content #back {
     font-size: 2em;
     font-family: "DIN Pro Condensed Regular", monospace; }
