--- a/css/main.css
+++ b/css/main.css
@@ -508,20 +508,36 @@ header {
     .noble-study .case-header #noble-title {
       font-size: 3em; }
   .noble-study .noble {
-    width: 300px;
-    height: auto;
     display: flex;
     flex-flow: column;
+    justify-content: flex-start;
     margin: 0 auto;
-    line-height: 1.5; }
+    line-height: 1.5;
+    padding: 50px 35px; }
     .noble-study .noble h1 {
       font-family: "DIN Pro Condensed Regular", monospace;
       font-size: 2em; }
   .noble-study .case-intro {
     width: 100%;
-    font-size: 1.2em;
-    background: #ebeffb;
-    padding: 35px; }
+    font-size: 1.2em; }
+
+.case-objective {
+  background-color: #8AA0E8; }
+
+.case-process {
+  background-color: #232C33;
+  color: white;
+  position: relative; }
+  .case-process img {
+    position: absolute;
+    top: 250px;
+    right: 0px;
+    z-index: 999;
+    width: 50%;
+    max-width: 400px; }
+
+.case-result {
+  background-color: #8AA0E8; }
 
 /*!
  * fullPage 2.7.9
