add gallery to noble

--- a/css/main.css
+++ b/css/main.css
@@ -530,10 +530,10 @@ header {
   position: relative; }
   .case-process img {
     position: absolute;
-    top: 250px;
-    right: 0px;
+    bottom: -80px;
+    right: 10px;
     z-index: 999;
-    width: 50%;
+    width: 20%;
     max-width: 400px; }
 
 .case-result {
